# mlc-tools

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  FEATURES.txt  GAMES.md  GAMES.txt  LICENSE  PythonApplication1.pyproj  PythonApplication1.sln  README.md  README.rst  TODO.md  declaration.txt  declaration_copy.txt  install_local.py  java.py  mlc.pyproj  mlc.sln  perfomance_dungeon.py  profile.py  reg_expresions.txt  setup.py  temp.py  templates.txt  upload.py
.github/workflows/: ccpp.yml  pythonpublish.yml
.run/: mlc_build.run.xml  test_serializer_python.run.xml
cmake/: CMakeLists.txt
config/: base.mlc  commands.mlc  model.mlc  requests.mlc  test.mlc
config/quests/: base.mlc  simple.mlc
config/unit/: base.mlc
mlc_tools/: .pylintrc  Class.py  Copyright.py  DataParser.py  DataStorageCreators.py  Error.py  Function.py  Generator_.py  Linker.py  Object.py  ObserverCreater.py  Parser.py  TestClass.py  Validator.py  Writer.py  WriterCpp.py  WriterJava.py  WriterJavaScript.py  WriterPhp.py  WriterPython.py  __init__.py  common.py  constants.py  cpp_extension.py  cpp_functions.py  fileutils.py  main.py  mlc_tools.py  protocols.py  protocols_java.py  protocols_js.py  protocols_php.py  regex.py  version.py
mlc_tools/base/: DataParser.py  Generator.py  GeneratorDataStorageBase.py  GeneratorUnitTestsInterface.py  Language.py  Linker.py  Model.py  ObserverCreater.py  Parser.py  SerializerBase.py  TranslatorBase.py  Validator.py  Writer.py  WriterBase.py  __init__.py  cache.py  circular_reference.py  data_parser.py  generator.py  generator_data_storage_base.py  generator_operator_equals.py  generator_unit_tests_interface.py  generator_visitor.py  language.py  linker.py  model.py  parser.py  save_plugin_base.py  serializer_base.py  translator_base.py  validator.py  writer_base.py
mlc_tools/console/: arguments.py  config.py  (+2 more)
php_tests/: test.php  test.py
simple_test/: CMakeLists.txt  generate.py  main.cpp  test_cpp.py  test_php.php  test_php.py  test_py.py  test_python.py
simple_test/common/: main.cpp
simple_test/common/tests/: Data.cpp  Data.h  Side.cpp  TestSerializeAllTypes.cpp  Visitor.cpp  Visitor.h  enum.cpp
simple_test/config/: base.mlc  copyright.txt  data.mlc  protocol_cpp_json.txt  protocol_cpp_xml.txt  protocol_json.txt  protocol_py_xml.txt  protocol_xml.txt  side.mlc  test.mlc
simple_test/data_json/: unit1.json  unit2.json
simple_test/data_xml/: data.xml
simple_test/python/: test.py
simple_test/tests/: Visitor.cpp  Visitor.h
src/: Class.py  Copyright.py  DataParser.py  DataStorageCreators.py  Error.py  Function.py  Object.py  Parser.py  Writer.py  WriterCpp.py  WriterCppSerializationXml.py  WriterCppSerializatorJson.py  WriterCppSerializatorXml.py  WriterJava.py  WriterJavaScript.py  WriterPhp.py  WriterPySerializationJson.py  WriterPySerializationXml.py  WriterPython.py  arguments_parser.py  constants.py  convert.py  cpp_functions.py  fileutils.py  main.py  protocols.py  protocols_js.py  protocols_php.py
test_serialize/: CMakeLists.txt  config.mlc  run.py  step_0.py  step_1.php  step_2.cpp  step_3.py
tests/: mlc_build.py
tests/simple_test/: CMakeLists.txt  test_cpp.py  test_js.js  test_js.py  test_php.php  test_php.py  test_py.py
tests/simple_test/common/: main.cpp
tests/simple_test/common/tests/: Side.cpp  Side.h  TestSerializeAllTypes.cpp  TestSerializeAllTypes.h  Visitor.cpp  enum.cpp  enum.h
tests/simple_test/config/: abstract_classes.mlc  base.mlc  clone.mlc  compare.mlc  constructor.mlc  data.mlc  enum.mlc  exceptions.mlc  function_templates.mlc  inner_class.mlc  observable.mlc  serialize.mlc  side.mlc  static_property_as_object.mlc  test.mlc  test_includes.mlc  test_intrusive_ptr.mlc  test_translate.mlc
tests/simple_test/config_additional/: test.mlc
tests/simple_test/data_additional/: data.json  data.xml
tests/simple_test/data_json/: complex_map.json  dict.json  list_list_bool.json  unit1.json  unit2.json
tests/simple_test/data_xml/: data.xml
tests/test_database/: CMakeLists.txt  main.cpp  test_cpp.py  test_php.php  test_php.py  test_py.py
tests/test_database/config/: base.mlc
tests/test_database/lib/cpp/: DataBasePostgreSql.cpp  DataBasePostgreSql.h  DataBaseSqlite.cpp  DataBaseSqlite.h
tests/test_database/lib/php/: DataBase.php
tests/test_database/lib/py/: db.py
tests/test_functions/: CMakeLists.txt  main.cpp  test_js.js  test_php.php  test_py.py
tests/test_functions/config/: base.mlc
tests/test_serialize/: CMakeLists.txt  config.mlc  run.py  step_0.py  step_1.php  step_2.cpp  step_3.py
tests/test_serializer/: CMakeLists.txt  generate_tests.py  main.cpp  tests.h
tests/test_serializer/cpp/: generate.py  main.cpp  tests.h
tests/test_serializer/cpp/src/: FooObject.cpp  json.h  xml.h
tests/test_serializer/cpp/src/serialize/: SerializerCommon.h  SerializerJson.cpp  SerializerJson.h  SerializerXml.cpp  SerializerXml.h
tests/test_serializer/cpp/third/jsoncpp/: json_writer.cpp
tests/test_serializer/py/: DeserializerJson.py  DeserializerXml.py  Meta.py  SerializerJson.py  SerializerXml.py  cpp_tests.py  generate.py  main.py  tests_from_serialize_cpp.py  tests_intrusive.py
tests/test_serializer/src/: AllTypes.cpp  AllTypes.h  AllTypesChildren.cpp  AllTypesChildren.h  FooObject.cpp  FooObject.h  Serializer.cpp  Serializer.h  TestEnum.cpp  TestEnum.h  json.h  mg_extensions.cpp  mg_extensions.h  xml.h
tests/test_serializer/src/serialize/: Pimpl.hpp  SerializerCommon.h  SerializerJson.cpp  SerializerJson.h  SerializerXml.cpp  SerializerXml.h
tests/test_virtual_methods/: CMakeLists.txt  config.mlc  main.cpp  test_cpp.py  test_js.js  test_js.py  test_php.php  test_php.py  test_py.py
tools/: appveyor.bat  appveyor_1.bat  appveyor_2.bat  appveyor_3.bat  change_version.py  git-hook-pre-commit.py  mlc_build.py  profile.py
unit_tests/: base.parser.py  core.function.parse.py  core.object.parse.py  module.writer.py  test_base_parser.py  test_core_function_parse.py  test_core_object_parse.py  test_model.py  test_module_serializer.py  test_module_writer.py  test_translate_by_regex.py  utils.common.py
(+172 files in other folders)
